--- a/package.json
+++ b/package.json
@@ -25,18 +25,21 @@
     "url": ""
   },
   "dependencies": {
+    "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-plugin-ts": "^2.7.1",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
-    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "prettier": "2.2.1"
