--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "gatsby": "^3.2.0",
     "gatsby-image": "^3.2.0",
     "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-netlify-cms": "^5.2.0",
     "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-plugin-ts": "^2.7.1",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
+    "netlify-cms-app": "^2.14.33",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
