feat(blog): add blog creators and update some text

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,22 +8,23 @@ backend:
     uploadMedia: '[skip ci] Upload “{{path}}”'
     deleteMedia: '[skip ci] Delete “{{path}}”'
 
-media_folder: static/img
+media_folder: contents/assets
 public_folder: /img
 
 collections:
   - name: 'blog'
     label: 'Blog'
-    folder: 'content/blog'
+    folder: 'contents/posts'
     create: true
     slug: 'index'
-    path: '{{title}}/index'
+    path: '{{fileTitle}}/index'
     editor:
       preview: false
     fields:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post" }
+      - { label: "File Title", name: "fileTitle", widget: "string" }
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
       - { label: "Tags", name: "tags", widget: "list" }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
