--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-plugin-ts": "^2.7.1",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-remark": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "netlify-cms-app": "^2.14.33",
     "react": "^17.0.2",
