--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-plugin-ts": "^2.7.1",
+    "gatsby-remark-autolink-headers": "^4.0.0",
+    "gatsby-remark-katex": "^4.2.0",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-remark": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
+    "katex": "^0.13.3",
     "netlify-cms-app": "^2.14.33",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
